add academicons, zenodo to footer

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -81,22 +81,26 @@ website:
     background: "#000000"
     left: |
       Copyright &copy; 2023 [Royal Statistical Society](https://rss.org.uk/)
-    center:  
+    center:
       - href: https://github.com/realworlddatascience
         icon: github
         aria-label: GitHub
+      - href: https://zenodo.org/communities/realworlddatascience
+        text: "{{< ai zenodo size=2xl >}}"
+        aria-label: RWDS Zenodo community
+      - href: https://www.linkedin.com/showcase/rss-real-world-data-science
+        icon: linkedin
+        aria-label: LinkedIn
       - href: https://twitter.com/rwdatasci
         icon: twitter
         aria-label: Twitter
       - href: https://fosstodon.org/@rwdatasci
         icon: mastodon
         aria-label: Mastodon
-      - href: https://www.linkedin.com/showcase/rss-real-world-data-science
-        icon: linkedin
-        aria-label: LinkedIn
       - href: feeds.html
         icon: rss
         aria-label: RWDS rss
+
     right: |
       [Terms & Conditions](/ts-and-cs.qmd)
 
