moved navbar button right

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ website:
   # Thank you!
   # google-analytics: "G-1TTWB7YTR6"
   navbar:
+    toggle-position: right
     background: "#f0eeeb"
     logo: images/rwds-logo-150px.png
     logo-alt: "Real World Data Science brand"
