add Feb newsletter

--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "February 2024"
+  intro: Well, we’ve made it through January... continuing violence in the Middle East and Ukraine, depressingly ineffective politics set against a backdrop of dramatically fluctuating temperatures (at least in the UK)... Definitely time to lose ourselves in some thought provoking AI and Data Science reading materials!
+  href: https://rssdsaisection.substack.com/p/february-newsletter-3fe
+  date: 02/03/2024
+  
 - title: "January 2024"
   intro: Happy New Year! I hope you all had a great festive period catching up with friends and family and are suitably energised for 2024... or not! Either way, how about easing gently into January with some thought provoking AI and Data Science reading materials...
   href: https://rssdsaisection.substack.com/p/january-newsletter-9f0
