--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ website:
   # If building your own site, replace our GA tag with your own GA tag before deployment.
   # This will prevent your activity being tracked and counted in our analytics dashboard.
   # Thank you!
-  google-analytics: "G-1TTWB7YTR6"
+  # google-analytics: "G-1TTWB7YTR6"
   navbar:
     toggle-position: right
     background: "#f0eeeb"
