--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,7 @@ website:
         - rwds-partners.qmd
         - contact.qmd
         - ts-and-cs.qmd
+        - CODE_OF_CONDUCT.md
     - title: "Call for contributions"
       contents:
         - contributor-docs/call-for-contributions.qmd
