updated legal docs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,6 +35,8 @@ website:
           href: about-rwds.qmd
         - text: "How to contribute"
           href: contributor-docs/call-for-contributions.qmd
+        - text: "Code of conduct"
+          href: CODE_OF_CONDUCT.md
         - text: "Contact us"
           href: contact.qmd
   sidebar: 
@@ -46,6 +48,7 @@ website:
         - contact.qmd
         - ts-and-cs.qmd
         - CODE_OF_CONDUCT.md
+        - LICENCE.md
     - title: "Call for contributions"
       contents:
         - contributor-docs/call-for-contributions.qmd
@@ -82,7 +85,7 @@ website:
   page-footer:
     background: "#000000"
     left: |
-      Copyright &copy; 2024 [Royal Statistical Society](https://rss.org.uk/)
+      [Copyright &copy; 2024 Royal Statistical Society](/LICENCE.md)
     center:
       - href: https://github.com/realworlddatascience
         icon: github
