Careers renamed and redirected to People & Paths

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ website:
     right:
       - case-studies/index.qmd
       - ideas/index.qmd
-      - careers/index.qmd
+      - people-paths/index.qmd
       - viewpoints/index.qmd
       - text: "About RWDS"
         menu: 
@@ -61,10 +61,10 @@ website:
         - contributor-docs/datasciencebites.qmd
         - contributor-docs/contributor-guidelines.qmd
         - contributor-docs/style-guide.qmd
-    - title: "Careers"
+    - title: "People & Paths"
       contents:
-        - careers/index.qmd
-        - careers/career-profiles/index.qmd
+        - people-paths/index.qmd
+        - people-paths/career-profiles/index.qmd
     - title: "Ideas"
       contents:
         - ideas/index.qmd
