Foundation renamed to include "s"

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -65,7 +65,7 @@ website:
       contents:
         - people-paths/index.qmd
         - people-paths/career-profiles/index.qmd
-    - title: "Foundation & Frontiers"
+    - title: "Foundations & Frontiers"
       contents:
         - ideas/index.qmd
         - ideas/tutorials/index.qmd
