--- a/the-pulse/newsletter/rssdsai-newsletter.yml
+++ b/the-pulse/newsletter/rssdsai-newsletter.yml
@@ -1,4 +1,5 @@
-- title: "March 2024"
+- image: https://substack-post-media.s3.amazonaws.com/public/images/104992b6-be44-40be-a57a-818743f5371b_2048x1298.png
+  title: "March 2024"
   intro: Well, I don't know about you, but February was a bit of a blur even with the extra day -- we should be used to it now I guess -- certainly less confusing than Julius Caesar's 445 day long 'year of confusion' in 46 B.C. ... Progress of sorts! Definitely time to lose ourselves in some some thought provoking AI and Data Science reading materials!
   href: https://rssdsaisection.substack.com/p/march-newsletter-4f2
   date: 03/01/2024
