--- a/the-pulse/newsletter/rssdsai-newsletter.yml
+++ b/the-pulse/newsletter/rssdsai-newsletter.yml
@@ -3,6 +3,7 @@
   path: https://rssdsaisection.substack.com/p/march-newsletter-4f2
   date: 03/01/2024
   image: https://substackcdn.com/image/fetch/$s_!m2EF!,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F104992b6-be44-40be-a57a-818743f5371b_2048x1298.png
+  image-alt: Example alt text
 
 - title: "February 2024"
   description: Well, we've made it through January... continuing violence in the Middle East and Ukraine, depressingly ineffective politics set against a backdrop of dramatically fluctuating temperatures (at least in the UK)... Definitely time to lose ourselves in some thought provoking AI and Data Science reading materials!
