--- a/the-pulse/newsletter/rssdsai-newsletter.yml
+++ b/the-pulse/newsletter/rssdsai-newsletter.yml
@@ -1,5 +1,12 @@
+- title: "October 2025"
+  description: Well September certainly seemed to dissapear rapidly, as did the sun- I'm still hoping for a few warm days before the darkness kicks in! Time to sit back with some reading materials on all things Data Science and AI.
+  path: https://rssdsaisection.substack.com/p/october-newsletter-7b9
+  date: 10/01/2025
+  image: https://substackcdn.com/image/fetch/$s_!PxxD!,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F0708e24f-ee09-4a0f-ab3f-6f1f5672579e_2000x1144.png
+  image-alt: cursed webpage 
+
 - title: "September 2025"
-  description: It's been quite a summer so far with something for everyone- from the Lionesses conquering all (fingers crossed for the Red Roses), to heat waves, wildfires and the ever traumatic/engaging spectacle of the Trump White house! Time to find a quiet spot in the sun and relax with some reading materials on all things Data Science and AI
+  description: It's been quite a summer so far with something for everyone- from the Lionesses conquering all (fingers crossed for the Red Roses), to heat waves, wildfires and the ever traumatic/engaging spectacle of the Trump White house! Time to find a quiet spot in the sun and relax with some reading materials on all things Data Science and AI.
   path: https://rssdsaisection.substack.com/p/september-newsletter-365
   date: 09/01/2025
   image: https://substackcdn.com/image/fetch/$s_!zCoP!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Fae92e8c2-33a0-421a-aff4-168e597cb059_1708x1147.png
@@ -13,14 +20,14 @@
   image-alt: birds in a bar drinking beer and then going to the cinema
 
 - title: "June 2025"
-  description: Well May flew by in a whirlwind of bank-holidays here in the UK and even some glimpses of sunshine! Now June is here, it's definitely time for some 'summer is coming' distraction with a deep dive into all things Data Science and AI
+  description: Well May flew by in a whirlwind of bank-holidays here in the UK and even some glimpses of sunshine! Now June is here, it's definitely time for some 'summer is coming' distraction with a deep dive into all things Data Science and AI.
   path: https://rssdsaisection.substack.com/p/june-newsletter-7d4
   date: 06/01/2025  
   image: https://substackcdn.com/image/fetch/$s_!Q009!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Ff0e1e6c4-4866-4fa4-ab98-b7308eeee675_1228x820.png
   image-alt: old sailor with a knitted blue hat
 
 - title: "May 2025"
-  description: Hope you all enjoyed the recent Easter weekend, and are managing to avoid thinking too hard about the current geopolitical turmoil… Definitely time for some distraction with a deep dive into all things Data Science and AI
+  description: Hope you all enjoyed the recent Easter weekend, and are managing to avoid thinking too hard about the current geopolitical turmoil… Definitely time for some distraction with a deep dive into all things Data Science and AI.
   path: https://rssdsaisection.substack.com/p/may-newsletter-b59
   date: 05/01/2025  
   image: https://substackcdn.com/image/fetch/$s_!uPJR!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Fd9352ba6-2342-44f3-932a-21d7cf04083d_630x464.png
@@ -34,7 +41,7 @@
   image-alt: Collage of different images
 
 - title: "March 2025"
-  description: March is here but not much sign of spring yet in London (apparently we had zero minutes of sunshine for seven consecutive days for the first time in nearly 50 years clearly time to bury yourself in some fun AI and Data Science
+  description: March is here but not much sign of spring yet in London (apparently we had zero minutes of sunshine for seven consecutive days for the first time in nearly 50 years clearly time to bury yourself in some fun AI and Data Science.
   path: https://rssdsaisection.substack.com/p/march-newsletter-e5c
   date: 03/01/2025  
   image: https://substackcdn.com/image/fetch/$s_!RNvU!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F4c8a456a-6c52-41e7-b6c9-960bbf054b88_3840x2160.png
