--- a/the-pulse/newsletter/rssdsai-newsletter.yml
+++ b/the-pulse/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,10 @@
+- title: "November 2025"
+  description: Well September certainly seemed to dissapear rapidly, as did the sun- I'm still hoping for a few warm days before the darkness kicks in! Time to sit back with some reading materials on all things Data Science and AI.
+  path: https://rssdsaisection.substack.com/p/november-newsletter-2c1
+  date: 11/01/2025
+  image: https://substackcdn.com/image/fetch/$s_!Suoy!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F6528139e-de82-4b0f-988d-f978dd56d47e_2802x2304.jpeg
+  image-alt: mechanical fish 
+
 - title: "October 2025"
   description: Well September certainly seemed to dissapear rapidly, as did the sun- I'm still hoping for a few warm days before the darkness kicks in! Time to sit back with some reading materials on all things Data Science and AI.
   path: https://rssdsaisection.substack.com/p/october-newsletter-7b9
