--- a/the-pulse/newsletter/rssdsai-newsletter.yml
+++ b/the-pulse/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,10 @@
+- title: "February 2026"
+  description: Well January seemed to fly by. With 2026 well underway, and no letup in the geopolitical shocks, perhaps it is time for some distraction with all things Data Science and AI.
+  path: https://rssdsaisection.substack.com/p/february-newsletter-857
+  date: 02/01/2026
+  image: https://substackcdn.com/image/fetch/$s_!KpmJ!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F18e7ece9-22bb-4285-8106-1963696bc413_2127x1400.jpeg
+  image-alt: Collage different photos, woman, a lion, a husky in a sheep costume, a rocker...
+
 - title: "January 2026"
   description: Happy new year! Hope you all had a fantastic holiday period and indulged to the best/worst of your abilities. 2026 is here - time to prepare for the year ahead with some good reading materials on all things Data Science and AI.
   path: https://rssdsaisection.substack.com/p/january-newsletter-402
